--- a/tem/index.html
+++ b/tem/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Amin Crockerys</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
 </head>
@@ -16,9 +16,18 @@
     <div class="row align-items-center">
         <div class="col-md-12">
             <p style="float: left;">amincrockerys@gmail.com</p>
-            <a class="btn btn-primary" href="user/login/" role="button">Login</a>
-            <a class="btn btn-primary" href="user/register" role="button">Register</a>
             <a class="btn btn-primary" href="admin/" role="button">Admin</a>
+            {% if user.is_authenticated %}
+
+                <a class="btn btn-primary" href="user/logout" role="button">Logout</a>
+                <a class="btn btn-primary" href="user/profile" role="button">Profile</a>
+                <a style="padding-top: 7px">{{ user.username }}</a>
+            {% else %}
+                <a class="btn btn-primary" href="user/login" role="button">Login</a>
+                <a class="btn btn-primary" href="user/register" role="button">Register</a>
+            {% endif %}
+
+
         </div>
     </div>
 </section>
@@ -88,7 +97,7 @@
     <div class="row">
         <div class="col-md-12">
 
-            {% for dps in dp %}
+            {% for dps in page_obj %}
 
                 <div class="bboxx">
                         <div class="cards"  style="background-image: url('{{ dps.img.url }}')">
@@ -98,7 +107,7 @@
                         <div class="bodys">
                             <h6 style="padding-top: 10px">{{dps.name}}</h6>
                             <p>{{ dps.res }} TAKA</p>
-                            <button type="button" class="btn btn-primary">BUY NOW</button>
+                            <a type="button" href="{{ dps.get_absolute_url }}" class="btn btn-primary">Details</a>
                         </div>
                 </div>
 
@@ -107,6 +116,50 @@
         </div>
     </div>
 </section>
+
+
+
+<section class="container-fluid">
+
+    <div class="row align-items-center">
+
+        <div class="col-md-12">
+
+
+                                <div  class="pago d-flex justify-content-center">
+
+                                    {% if page_obj.has_previous %}
+                                    <a class="btn btn-primary" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                                    {% endif %}
+
+                                    <a style="margin-right: 10px;margin-left: 10px;margin-top: 10px" >Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a>
+
+                                    {% if page_obj.has_next %}
+                                        <a class="btn btn-primary"  href="?page={{ page_obj.next_page_number }}">Next</a>
+                                    {% endif %}
+
+                                </div>
+
+
+        </div>
+
+    </div>
+
+</section>
+
+
+
+
+<section class="container-fluid">
+
+    <div style="height: 30px; background-color: rgba(150,54,148,0.86);margin-top: 10px" class="row align-items-center">
+
+        <div class="col-md-12">
+        </div>
+    </div>
+</section>
+
+
 
 <section class="foots container-fluid">
 
@@ -120,7 +173,7 @@
 
             <h3>আমিন ক্রোকারিজ</h3>
             <h6>ডাক্তার পট্টী, ঝালকাঠি</h6>
-            <h5>মোবাঃ ০১৭২৮২৫৩৪০০</h5>
+            <h6>মোবাঃ ০১৭২৮২৫৩৪০০</h6>
 
         </div>
         <div class="col-md-3">
