--- a/tem/cart.html
+++ b/tem/cart.html
@@ -169,25 +169,25 @@
                             <td class="price" data-title="Price"><span>{{ card.product.res }} </span></td>
                             <td class="qty" data-title="Qty"><!-- Input Order -->
                                 <div class="input-group">
+
                                     <div class="button minus">
-                                        <button type="button" class="btn btn-primary btn-number" disabled="disabled"
-                                                data-type="minus" data-field="quant[1]">
+                                        <a  class="btn btn-primary btn-number" href="{{ card.product.deletefromcart}}" >
                                             <i class="ti-minus"></i>
-                                        </button>
+                                        </a>
                                     </div>
-                                    <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100"
-                                           value="{{ card.quantity }}">
+
+                                    <input type="text" name="quant[1]" class="input-number" data-min="1" data-max="100" value="{{ card.quantity }}">
+
                                     <div class="button plus">
-                                        <button type="button" class="btn btn-primary btn-number" data-type="plus"
-                                                data-field="quant[1]">
+                                        <a  class="btn btn-primary btn-number" href="{{ card.product.addtocard}}" >
                                             <i class="ti-plus"></i>
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                                 <!--/ End Input Order -->
                             </td>
-                            <td class="total-amount" data-title="Total"><span>{{ card.product.res}}</span></td>
-                            <td class="action" data-title="Remove"><a href="#"><i class="ti-trash remove-icon"></i></a>
+                            <td class="total-amount" data-title="Total"><span>{{ card.amount}}</span></td>
+                            <td class="action" data-title="Remove"><a href="{{ card.product.deleteallcart }}"><i class="ti-trash remove-icon"></i></a>
                             </td>
                         </tr>
 
@@ -205,31 +205,32 @@
                 <!-- Total Amount -->
                 <div class="total-amount">
                     <div class="row">
+
                         <div class="col-lg-8 col-md-5 col-12">
-                            <div class="left">
-                                <div class="coupon">
-                                    <form action="#" target="_blank">
-                                        <input name="Coupon" placeholder="Enter Your Coupon">
-                                        <button class="btn">Apply</button>
-                                    </form>
-                                </div>
-                                <div class="checkbox">
-                                    <label class="checkbox-inline" for="2"><input name="news" id="2" type="checkbox">
-                                        Shipping (+10$)</label>
-                                </div>
-                            </div>
+{#                            <div class="left">#}
+{#                                <div class="coupon">#}
+{#                                    <form action="#" target="_blank">#}
+{#                                        <input name="Coupon" placeholder="Enter Your Coupon">#}
+{#                                        <button class="btn">Apply</button>#}
+{#                                    </form>#}
+{#                                </div>#}
+{#                                <div class="checkbox">#}
+{#                                    <label class="checkbox-inline" for="2"><input name="news" id="2" type="checkbox">#}
+{#                                        Shipping (+10$)</label>#}
+{#                                </div>#}
+{#                            </div>#}
                         </div>
+
                         <div class="col-lg-4 col-md-7 col-12">
                             <div class="right">
                                 <ul>
-                                    <li>Cart Subtotal<span>$330.00</span></li>
+                                    <li>Cart Subtotal<span>{{ cardtotal }}</span></li>
                                     <li>Shipping<span>Free</span></li>
-                                    <li>You Save<span>$20.00</span></li>
-                                    <li class="last">You Pay<span>$310.00</span></li>
+                                    <li class="last">You Pay<span>$ {{ cardtotal }}</span></li>
                                 </ul>
                                 <div class="button5">
                                     <a href="#" class="btn">Checkout</a>
-                                    <a href="#" class="btn">Continue shopping</a>
+                                    <a href="/" class="btn">Continue shopping</a>
                                 </div>
                             </div>
                         </div>
