--- a/tem/newTem.html
+++ b/tem/newTem.html
@@ -30,7 +30,6 @@
     <link rel="stylesheet" href={% static "css/responsive.css" %}>
 
     <style>
-
     </style>
 
 </head>
@@ -55,6 +54,7 @@
     <div class="topbar">
         <div class="container">
             <div class="row">
+
                 <div class="col-lg-4 col-md-12 col-12">
                     <!-- Top Left -->
                     <div class="top-left">
@@ -90,10 +90,12 @@
     <div class="middle-inner">
         <div class="container">
             <div class="row">
+
                 <div class="col-lg-2 col-md-2 col-12">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="/"><img style="height: 100px" src={% static 'images/logo.png' %} alt="logo"></a>
+{#                        <a href="/"><img style="height: 50px" src={% static 'images/logo.png' %} alt="logo"></a>#}
+                        <a href="/"><h5 style="text-align: center;">Amin Crockeries</h5></a>
                     </div>
                     <!--/ End Logo -->
 
