--- a/tem/details.html
+++ b/tem/details.html
@@ -1,117 +1,48 @@
+{% extends 'component/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Amin Crockerys</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
-</head>
-<body>
+
+{% block hero %}
+{% endblock %}
+
+
+{% block content %}
+<div class="container mt-2">
+    <div class="card">
+        <div class="card-body">
+
+            <div class="row">
 
 
 
-<section class="container-fluid myheader">
-    <div class="row align-items-center">
-        <div class="col-md-12">
-            <p style="float: left;">amincrockerys@gmail.com</p>
+                <div class="col-md-4">
+                    <img class="details-img img-fluid" src="{{ product.img.url }}">
+                </div>
+
+                <div class="col-md-6">
+                    <h3 class="mt-3">{{ product.name }}</h3>
+                    <h2> ৳ {{ product.unit_price}}</h2>
+                    <h5> Available : {{ product.stock_quantity}} QTY</h5>
+
+                    <p class="mt-3">{{ product.description}}</p>
 
 
-
-            <a class="btn btn-primary" href="/" role="button">Go To Main Page</a>
-        </div>
-    </div>
-</section>
-
-
-
-<section style="margin-top: 35px" class="products container">
-    <div class="row">
-
-        <div class="col-md-2">
-
-        </div>
-        <div class="col-md-8">
-
-
-
-                <div class="bboxxx">
-
-
-                        <img src="{{ datas.img.url }}">
-                        <h6 style="padding-top: 10px">{{datas.name}}</h6>
-                        <p>{{ datas.res }} TAKA</p>
-                        <p>{{ datas.tag }}</p>
-
-                        <button type="button" class="btn btn-primary">ADD TO CART</button>
+                </div>
+                <div class="col-md-2 mt-3">
+                    <a href="{% url 'addToCart' product.id %}" class="btn details-btn"><i class="bi bi-bag-plus"></i>
+                        Add to Cart</a>
+                    <a href="{% url 'addToWishList' product.id %}" class="btn details-btn"><i class="bi bi-heart"></i>
+                        Add to Fav</a>
 
                 </div>
 
 
-
-        </div>
-
-        <div class="col-md-2">
-
+            </div>
         </div>
     </div>
+</div>
 
 
-</section>
-
-
-
-
-
-
-<section class="container-fluid">
-
-    <div style="height: 30px; background-color: rgba(150,54,148,0.86);margin-top: 10px" class="row align-items-center">
-
-        <div class="col-md-12">
-        </div>
-    </div>
-</section>
-
-
-
-<section class="foots container-fluid">
-
-    <div class="row">
-        <div class="col-md-3">
-
-
-
-        </div>
-        <div class="col-md-6">
-
-            <h3>আমিন ক্রোকারিজ</h3>
-            <h6>ডাক্তার পট্টী, ঝালকাঠি</h6>
-            <h6>মোবাঃ ০১৭২৮২৫৩৪০০</h6>
-
-        </div>
-        <div class="col-md-3">
-
-
-
-        </div>
-
-    </div>
-
-</section>
-
-
-
-<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-
-</body>
-</html>
-
-
-
+{% endblock %}
 
 
 
