--- a/tem/login.html
+++ b/tem/login.html
@@ -26,12 +26,17 @@
                         <input type="text" name="username" class="form-control mt-3" placeholder="Username" required>
 
 
-                        <input type="password" name="password" class="form-control mt-3" placeholder="Password" required>
+                        <input type="password" name="password" class="form-control mt-3" placeholder="Password"
+                               required>
 
 
-                        <button  type="submit" class="btn btn-primary mt-3">Log in</button>
+                        <button type="submit" class="btn btn-primary mt-3">Log in</button>
 
                     </form>
+
+                    <div style="text-align: right">
+                        <a href="{%url 'forgetPassword'%}">Forgot Password?</a>
+                    </div>
 
 
                 </div>
