--- a/tem/orderDetails.html
+++ b/tem/orderDetails.html
@@ -5,9 +5,15 @@
 
 <div class="col-md-9">
 
-    <div style="text-align: left" class="">
-        <h4>ORDER DETAILS</h4>
+    <div  class="row">
+        <h4 class="col-md-6" style="text-align: left">ORDER DETAILS</h4>
+        <div style="text-align: right" class="col-md-6">
+           <a class="btn btn-danger" href="{%url 'download_voucher' order.id%}">Download</a>
+        </div>
     </div>
+
+
+
     <hr>
 
 
